syntax = "proto3";

package grpc.ProductService;

service ClientProductService {
  rpc GetProductsByClient(ClientRequest) returns (ProductResponse);
}

message ClientRequest {
  string client_id = 1;
}

message Product {
  string client_id = 1;
  string product_id = 2;
  string name = 3;
  string description = 4;
  double price = 5;
}

message ProductResponse {
  repeated Product products = 1;
}